<package>
  <name>humanoid_msgs</name>
  <version>0.4.0</version>
  <description>
    Messages and services for humanoid robots
  </description>
  <maintainer email="HornungA@informatik.uni-freiburg.de">Armin Hornung</maintainer>
  <maintainer email="dhruvkoolrajamani@gmail.com">Dhruv Kool Rajamani</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/humanoid_nav_msgs</url>
  <url type="bugtracker">https://github.com/DhruvKoolRajamani/humanoid_msgs/issues</url>
  <url type="repository">https://github.com/DhruvKoolRajamani/humanoid_msgs</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <metapackage/>
  </export>

</package>
